# nostr-tui

./: .gitignore  CHANGELOG.md  README.md  config.example.toml  pyproject.toml  requirements.txt
nostr_tui/: __init__.py  app.py  compose.py  config.py  events.py  feed.py  images.py  relay.py  zaps.py
