[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nostr-tui"
version = "0.1.0"
description = "A terminal UI client for the Nostr protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "textual>=0.47.0",
    "websockets>=12.0",
    "secp256k1>=0.14.0",
    "requests>=2.31.0",
    "bech32>=1.2.0",
]

[project.scripts]
nostr-tui = "nostr_tui.app:main"

[tool.setuptools.packages.find]
include = ["nostr_tui*"]
